tests/baselines/reference/arrayReferenceWithoutTypeArgs.errors.txt
==== tests/cases/compiler/arrayReferenceWithoutTypeArgs.ts (1 errors) ====
    class X {
        public f(a: Array) { }
                    ~~~~~
!!! error TS2173: Generic type references must include all type arguments.
    }